# t-snippet

./: Cargo.toml  README.md  application.yml
src/: main.rs
src/db/: db.rs  db_entity.rs  db_server.rs  es_entity.rs  es_server.rs  mod.rs  other_login_entity.rs  redis_server.rs
src/server/: web_server.rs
src/utils/: application_config.rs  constant.rs  db_utils.rs  es_client.rs  mod.rs  time.rs
