[package]
name = "t-snippet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.17", features = ["ws"] }
# axum 解决跨域
tower-http = { version = "0.3.4", features = ["cors"] }
tokio = { version = "1.22.0", features = ["full"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
sqlx = { version = "0.6.2", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "all-types",
    "macros",
] }
deadpool-postgres = "0.10.3"
postgres = "0.19.4"
chrono = { version = "0.4.23", features = ["serde"] }
reqwest="0.11.13"
